@@ -1,5 +1,11 @@
 2017-01-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+        * src/interp/compiler.boot, src/interp/i-output.boot,
+        src/interp/iterator.boot, src/interp/parse.boot,
+        src/interp/property.lisp: Simplify parseTran.
+
+2017-01-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/logic.spad, src/interp/category.boot,
 	src/interp/interop.boot: Minor cleanups.
 
